# clipfile-rs

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  rust-toolchain.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  publish.yml
docs/: api-level-audit.md  development.md  format-analysis.md  implementation-plan.md  manual-2d-camera-extended-fixtures.md  manual-2d-camera-fixture.md  model.md  one-zero-readiness.md  open-questions.md  writing.md
examples/: README.md  add_text_object.rs  clone_animation_track.rs  clone_image_cel_track.rs  clone_raster_layer.rs  clone_vector_stroke.rs  edit_animation_cel.rs  edit_text.rs  edit_vector_body.rs  export_preview.rs  export_raster.rs  insert_animation_key.rs  inspect.rs  inspect_animation.rs  inspect_cmc.rs  inspect_corrections.rs  inspect_document.rs  inspect_rulers.rs  inspect_text.rs  inspect_timelapse.rs  inspect_vector.rs  invert_first_tile.rs  invert_raster.rs  remove_animation_key.rs  remove_animation_track.rs  remove_text_object.rs  remove_vector_stroke.rs  rewrite.rs  translate_vector.rs
src/: animation.rs  cmc.rs  container.rs  correction.rs  database.rs  error.rs  external.rs  lib.rs  limits.rs  model.rs  raster.rs  ruler.rs  text.rs  timelapse.rs  vector.rs  writer.rs
