[package]
name = "clipfile"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "A streaming parser and toolkit for CLIP STUDIO PAINT files"
documentation = "https://docs.rs/clipfile"
homepage = "https://github.com/Aodaruma/clipfile-rs"
repository = "https://github.com/Aodaruma/clipfile-rs"
license = "MIT"
readme = "README.md"
keywords = ["clip-studio", "clip", "parser", "graphics"]
categories = ["parser-implementations", "multimedia::images"]
publish = ["crates-io"]
exclude = ["/tester/**"]

[dependencies]
flate2 = { version = "1.1.9", optional = true }
rusqlite = { version = "0.39.0", default-features = false, features = ["bundled", "serialize"], optional = true }

[features]
default = []
sqlite = ["dep:rusqlite"]
raster = ["sqlite", "dep:flate2"]
animation = ["sqlite", "dep:flate2"]
timelapse = ["sqlite", "dep:flate2"]

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "inspect_cmc"
required-features = ["sqlite"]

[[example]]
name = "inspect_corrections"
required-features = ["sqlite"]

[[example]]
name = "inspect_rulers"
required-features = ["sqlite"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
