[package]
name = "clipfile"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
description = "A streaming parser and toolkit for CLIP STUDIO PAINT files"
documentation = "https://docs.rs/clipfile"
homepage = "https://github.com/Aodaruma/clipfile-rs"
repository = "https://github.com/Aodaruma/clipfile-rs"
license = "MIT"
readme = "README.md"
keywords = ["clip-studio", "clip", "parser", "graphics"]
categories = ["parser-implementations", "multimedia::images"]
publish = ["crates-io"]
exclude = ["/tester/**", "/.vscode/**"]

[dependencies]
flate2 = { version = "1.1.9", optional = true }
image = { version = "=0.25.9", default-features = false, features = ["png"], optional = true }
rusqlite = { version = "0.39.0", default-features = false, features = ["bundled", "serialize"], optional = true }

[features]
default = []
sqlite = ["dep:rusqlite"]
raster = ["sqlite", "dep:flate2"]
image = ["raster", "dep:image"]
animation = ["sqlite", "dep:flate2"]
timelapse = ["sqlite", "dep:flate2"]
write = ["sqlite", "dep:flate2"]

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "inspect_cmc"
required-features = ["sqlite"]

[[example]]
name = "inspect_corrections"
required-features = ["sqlite"]

[[example]]
name = "inspect_rulers"
required-features = ["sqlite"]

[[example]]
name = "inspect_document"
required-features = ["sqlite"]

[[example]]
name = "export_preview"
required-features = ["sqlite"]

[[example]]
name = "inspect_text"
required-features = ["sqlite"]

[[example]]
name = "inspect_vector"
required-features = ["sqlite"]

[[example]]
name = "export_raster"
required-features = ["image"]

[[example]]
name = "inspect_animation"
required-features = ["animation"]

[[example]]
name = "inspect_timelapse"
required-features = ["timelapse"]

[[example]]
name = "rewrite"
required-features = ["write"]

[[example]]
name = "invert_first_tile"
required-features = ["write", "raster"]

[[example]]
name = "invert_raster"
required-features = ["write", "raster"]

[[example]]
name = "clone_raster_layer"
required-features = ["write", "raster"]

[[example]]
name = "edit_text"
required-features = ["write"]

[[example]]
name = "add_text_object"
required-features = ["write"]

[[example]]
name = "remove_text_object"
required-features = ["write"]

[[example]]
name = "edit_vector_body"
required-features = ["write"]

[[example]]
name = "translate_vector"
required-features = ["write"]

[[example]]
name = "clone_vector_stroke"
required-features = ["write"]

[[example]]
name = "remove_vector_stroke"
required-features = ["write"]

[[example]]
name = "edit_animation_cel"
required-features = ["write", "animation"]

[[example]]
name = "clone_animation_track"
required-features = ["write", "animation"]

[[example]]
name = "insert_animation_key"
required-features = ["write", "animation"]

[[example]]
name = "remove_animation_key"
required-features = ["write", "animation"]

[[example]]
name = "clone_image_cel_track"
required-features = ["write", "animation"]

[[example]]
name = "remove_animation_track"
required-features = ["write", "animation"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
